--- a/lombScargle.ipynb
+++ b/lombScargle.ipynb
@@ -99,6 +99,165 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!/usr/bin/env python\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from scipy.signal import lombscargle\n",
+    "from multiprocessing import Pool, cpu_count\n",
+    "import os\n",
+    "\n",
+    "# Crear la carpeta para guardar los periodogramas\n",
+    "os.makedirs(\"periodogramas\", exist_ok=True)\n",
+    "\n",
+    "# Función para calcular el periodograma con intervalo de confianza mediante bootstrap\n",
+    "def calcular_periodograma(archivo, n_bootstrap=1000, confidence_level=0.95):\n",
+    "    resultado = {\n",
+    "        'archivo': archivo,\n",
+    "        'mensaje': None,\n",
+    "        'periodo_maximo': np.nan,\n",
+    "        'poder_maximo': np.nan,\n",
+    "        'intervalo_periodo': None,\n",
+    "        'significativo': False,\n",
+    "        'frecuencias': None,\n",
+    "        'potencias': None\n",
+    "    }\n",
+    "\n",
+    "    # Leer los datos del archivo\n",
+    "    try:\n",
+    "        data = pd.read_csv(archivo, header=None, sep=r'\\s+')\n",
+    "    except Exception as e:\n",
+    "        resultado['mensaje'] = f\"Error al leer el archivo: {e}\"\n",
+    "        return resultado\n",
+    "\n",
+    "    # Transformar las fechas\n",
+    "    data.iloc[:, 0] -= data.iloc[:, 0].min()\n",
+    "    data.iloc[:, 0] *= 24 * 60  # Convertir a minutos\n",
+    "    data.iloc[:, 1] *= 10**8  # Escalar el flujo\n",
+    "    data = data.dropna()  # Eliminar NaNs\n",
+    "\n",
+    "    if len(data) == 0 or data.iloc[:, 1].var() == 0:\n",
+    "        resultado['mensaje'] = \"Datos insuficientes o constantes.\"\n",
+    "        return resultado\n",
+    "\n",
+    "    # Calcular el periodograma de Lomb-Scargle\n",
+    "    try:\n",
+    "        time = data.iloc[:, 0].values\n",
+    "        flux = data.iloc[:, 1].values\n",
+    "\n",
+    "        # Rango de períodos (50 a 200 minutos)\n",
+    "        frequency = np.linspace(1 / 150, 1 / 50, 1000)\n",
+    "        angular_frequency = 2 * np.pi * frequency\n",
+    "\n",
+    "        power = lombscargle(time, flux, angular_frequency)\n",
+    "\n",
+    "        # Guardar las frecuencias y potencias para graficar\n",
+    "        resultado['frecuencias'] = frequency\n",
+    "        resultado['potencias'] = power\n",
+    "\n",
+    "        # Máximo valor del periodograma\n",
+    "        max_index = np.argmax(power)\n",
+    "        periodo_maximo = 1 / frequency[max_index]\n",
+    "        poder_maximo = power[max_index]\n",
+    "\n",
+    "        # Bootstrap para calcular el intervalo de confianza del período\n",
+    "        bootstrap_periods = []\n",
+    "        for _ in range(n_bootstrap):\n",
+    "            # Resamplear los datos con reemplazo\n",
+    "            indices = np.random.choice(len(time), len(time), replace=True)\n",
+    "            resampled_time = time[indices]\n",
+    "            resampled_flux = flux[indices]\n",
+    "\n",
+    "            # Calcular el periodograma para el conjunto resampleado\n",
+    "            resampled_power = lombscargle(resampled_time, resampled_flux, angular_frequency)\n",
+    "\n",
+    "            # Obtener el período máximo del resampleo\n",
+    "            resampled_max_index = np.argmax(resampled_power)\n",
+    "            resampled_period = 1 / frequency[resampled_max_index]\n",
+    "            bootstrap_periods.append(resampled_period)\n",
+    "\n",
+    "        # Calcular el intervalo de confianza\n",
+    "        lower_bound = np.percentile(bootstrap_periods, (1 - confidence_level) / 2 * 100)\n",
+    "        upper_bound = np.percentile(bootstrap_periods, (1 + confidence_level) / 2 * 100)\n",
+    "        intervalo_periodo = (lower_bound, upper_bound)\n",
+    "\n",
+    "        # Significancia estadística\n",
+    "        global_threshold = np.mean(power) + 2 * np.std(power)\n",
+    "        significativo = poder_maximo > global_threshold\n",
+    "\n",
+    "        # Actualizar resultados\n",
+    "        resultado.update({\n",
+    "            'periodo_maximo': periodo_maximo,\n",
+    "            'poder_maximo': poder_maximo,\n",
+    "            'intervalo_periodo': intervalo_periodo,\n",
+    "            'significativo': significativo\n",
+    "        })\n",
+    "\n",
+    "        # Guardar los datos del periodograma en un archivo\n",
+    "        periodograma_file = f\"periodogramas/{os.path.basename(archivo).split('.')[0]}_periodograma.csv\"\n",
+    "        pd.DataFrame({'frecuencia': frequency, 'potencia': power}).to_csv(\n",
+    "            periodograma_file, index=False\n",
+    "        )\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        resultado['mensaje'] = str(e)\n",
+    "\n",
+    "    return resultado\n",
+    "# Leer la lista de archivos\n",
+    "with open(\"lista.txt\", \"r\") as file:\n",
+    "    lista_archivos = [line.strip() for line in file.readlines()]\n",
+    "\n",
+    "# Paralelizar el cálculo\n",
+    "num_cores = cpu_count() - 1\n",
+    "with Pool(processes=num_cores) as pool:\n",
+    "    resultados = pool.map(calcular_periodograma, lista_archivos)\n",
+    "\n",
+    "# Guardar los resultados generales\n",
+    "output_file = \"resultados.txt\"\n",
+    "resumen_file = \"resumen.txt\"\n",
+    "\n",
+    "output_data = pd.DataFrame({\n",
+    "    'archivo': [res['archivo'] for res in resultados],\n",
+    "    'periodicidad_maxima_minutos': [\n",
+    "        res['periodo_maximo'] if res['mensaje'] is None else \"NA\" for res in resultados\n",
+    "    ],\n",
+    "    'poder_maximo': [\n",
+    "        res['poder_maximo'] if res['mensaje'] is None else \"NA\" for res in resultados\n",
+    "    ],\n",
+    "    'intervalo_periodo': [\n",
+    "        res['intervalo_periodo'] if res['mensaje'] is None else \"NA\" for res in resultados\n",
+    "    ],\n",
+    "    'significativo': [\n",
+    "        res['significativo'] if res['mensaje'] is None else \"NA\" for res in resultados\n",
+    "    ]\n",
+    "})\n",
+    "\n",
+    "output_data.to_csv(output_file, sep='\\t', index=False, header=True)\n",
+    "\n",
+    "# Generar el resumen\n",
+    "resumen_lines = []\n",
+    "for res in resultados:\n",
+    "    if res['mensaje'] is None:\n",
+    "        resumen_lines.append(\n",
+    "            f\"Archivo: {res['archivo']}\\n\"\n",
+    "            f\"  Período Máximo: {res['periodo_maximo']:.2f} minutos\\n\"\n",
+    "            f\"  Intervalo del Período: {res['intervalo_periodo']}\\n\"\n",
+    "            f\"  Poder Máximo: {res['poder_maximo']:.4f}\\n\"\n",
+    "            f\"  Significativo: {'Sí' if res['significativo'] else 'No'}\\n\"\n",
+    "        )\n",
+    "    else:\n",
+    "        resumen_lines.append(f\"Archivo: {res['archivo']}\\n  Error: {res['mensaje']}\\n\")\n",
+    "\n",
+    "with open(resumen_file, \"w\") as resumen:\n",
+    "    resumen.write(\"\\n\".join(resumen_lines))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
